--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import './app/_variable';
+
+app-root{
+    background-color: $primaryColor;
+    font-family: $fontGenerico;
+    font-size: $dimensioneFontGenerico;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
