Realizzato il servizio utente

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,7 +1,7 @@
 $colorBack: #F7EBD4;
 $colorHover: red;
 $colorLink: rgb(36, 33, 33);
-$colorLinkFooter: purple;
+$colorLinkFooter: wheat;
 $colorShadow: #333333;
 $colorHeaderFooter: white;
 $colorTextHeaderFooter: white;
