--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,5 +7,9 @@ app-root{
     font-size: $dimensioneFontGenerico;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
+}
+
+app-home{
+    width: 100%;
 }
