Creazione dettaglio utente

--- a/src/app/_variable.scss
+++ b/src/app/_variable.scss
@@ -5,3 +5,17 @@ $white: white;
 $fontGenerico: Arial, Helvetica, sans-serif;
 $dimensioneFontGenerico: 2em;
 $effettoOmbra: 0px 0px 10px 1px black;
+
+$colorBack: #F7EBD4;
+$colorHover: red;
+$colorLink: rgb(36, 33, 33);
+$colorLinkFooter: wheat;
+$colorShadow: #333333;
+$colorHeaderFooter: white;
+$colorTextHeaderFooter: white;
+$colorTextHeader: wheat;
+$colorBorderNav: grey;
+$colorBorderForm: grey;
+$colorTextNav: rgb(36, 33, 33);
+$colorText: rgb(36, 33, 33);
+$colorBorderBottom: black;
