--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,16 +1,4 @@
-$colorBack: #F7EBD4;
-$colorHover: red;
-$colorLink: rgb(36, 33, 33);
-$colorLinkFooter: wheat;
-$colorShadow: #333333;
-$colorHeaderFooter: white;
-$colorTextHeaderFooter: white;
-$colorTextHeader: wheat;
-$colorBorderNav: grey;
-$colorBorderForm: grey;
-$colorTextNav: rgb(36, 33, 33);
-$colorText: rgb(36, 33, 33);
-$colorBorderBottom: black;
+@import "./../_variable";
 
 footer {
     display: flex;
