--- a/src/app/impostazioni/impostazioni.component.html
+++ b/src/app/impostazioni/impostazioni.component.html
@@ -1,3 +1,10 @@
-<p>
-  impostazioni works!
-</p>
+<section>
+  <label for="selezionaLingua">{{etichette.scegliUnaLingua}} </label>
+  <select name="selezionaLingua" id="selezionaLingua" [(ngModel)]="lingua">
+    <option value="">{{etichette.scegliUnaLingua}}</option>
+    <option value="it">{{etichette.italiano}}</option>
+    <option value="fr">{{etichette.francese}}</option>
+    <option value="en">{{etichette.inglese}}</option>
+  </select>
+  <button (click)="selezionaLingua()">Ok</button>
+</section>
