--- a/src/app/dettaglio-utente/dettaglio-utente.component.html
+++ b/src/app/dettaglio-utente/dettaglio-utente.component.html
@@ -12,7 +12,7 @@
   </article>
   <article>
     <label>{{etichette.dataNascita}}</label>
-    <div>{{utente.dob}}</div>
+    <div>{{utente.dob | date:'dd/MM/yyyy'}}</div>
   </article>
   <article>
     <label>{{etichette.indirizzo}}</label>
