--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,3 +1,1 @@
-<p>
-  gallery works!
-</p>
+<img src="https://www.standard.co.uk/s3fs-public/styles/story_large/public/thumbnails/image/2018/02/07/05/spacex0702a.jpg" alt="Space X Tesla">
